trunk/NewArchive/944f3de4e984bfa2ca5b6b9a2f5dd572-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:11:39: error: expected type-specifier
 auto Queue ( TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                       ^
main.cpp:11:39: error: expected initializer
main.cpp:19:19: error: template declaration of 'auto Queue'
 auto Queue ( std::true_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                   ^
main.cpp:19:14: error: 'true_type' is not a member of 'std'
 auto Queue ( std::true_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
              ^
main.cpp:19:35: error: expected primary-expression before '&&' token
 auto Queue ( std::true_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                   ^
main.cpp:19:38: error: 'fx' was not declared in this scope
 auto Queue ( std::true_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                      ^
main.cpp:19:44: error: expected primary-expression before '&&' token
 auto Queue ( std::true_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                            ^
main.cpp:19:47: error: 'arg0' was not declared in this scope
 auto Queue ( std::true_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                               ^
main.cpp:42:19: error: template declaration of 'auto Queue'
 auto Queue ( std::false_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                   ^
main.cpp:42:14: error: 'false_type' is not a member of 'std'
 auto Queue ( std::false_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
              ^
main.cpp:42:36: error: expected primary-expression before '&&' token
 auto Queue ( std::false_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                    ^
main.cpp:42:39: error: 'fx' was not declared in this scope
 auto Queue ( std::false_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                       ^
main.cpp:42:45: error: expected primary-expression before '&&' token
 auto Queue ( std::false_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                             ^
main.cpp:42:48: error: 'arg0' was not declared in this scope
 auto Queue ( std::false_type t, TFx&& fx, T0&& arg0 ) -> std::future< decltype( fx( arg0 ) ) > {
                                                ^
